--- a/server/public/homePage.html
+++ b/server/public/homePage.html
@@ -10,7 +10,11 @@
 <body>
     <div class="wrapper">
         <p>Hello, Welcome to api homepage</p>
-
+        <div class="links">
+            <p>Please select one</p>
+            <a href="/apiv1/products">Products</a>
+            <a href="/apiv1/products/0">Product with id 0</a>
+        </div>
     </div>
 </body>
 </html>
