Added http post

--- a/server/public/homePage.html
+++ b/server/public/homePage.html
@@ -14,6 +14,7 @@
             <p>Please select one</p>
             <a href="/apiv1/products">Products</a>
             <a href="/apiv1/products/0">Product with id 0</a>
+            <a href="/apiv1/submit-product">-> Submit products here <-</a>
         </div>
     </div>
 </body>
